--- a/docs/Хмелевар/Введение.md
+++ b/docs/Хмелевар/Введение.md
@@ -1,8 +1,8 @@
 ---
 sidebar_position: 3
-
-Create a Blog Post
 ---
+
+## Create Blog
 
 Docusaurus creates a **page for each blog post**, but also a **blog index page**, a **tag system**, an **RSS** feed...
 
