--- a/docs/Хмелевар/Введение.md
+++ b/docs/Хмелевар/Введение.md
@@ -2,6 +2,12 @@
 sidebar_position: 3
 ---
 
+**ОБНОВЛЕНИЕ 17 мая 2023**
+
+- **Обновлен рейдовый билд;**
+- **Обновлены аксессуары;**
+- **Обновлена информация по выбору оружия.**
+
 ## Create Blog
 
 Docusaurus creates a **page for each blog post**, but also a **blog index page**, a **tag system**, an **RSS** feed...
