--- a/docs/Хмелевар/Введение.md
+++ b/docs/Хмелевар/Введение.md
@@ -2,7 +2,7 @@
 sidebar_position: 3
 ---
 
-**ОБНОВЛЕНИЕ 17 мая 2023**
+## **ОБНОВЛЕНИЕ 17 мая 2023**
 
 - **Обновлен рейдовый билд;**
 - **Обновлены аксессуары;**
@@ -40,8 +40,8 @@ Feel free to play around and edit this post as much as you like.
 A new blog post is now available at <http://localhost:3000/blog/greetings>.
 
 ---
-sidebar_position: 3
----
+
+## sidebar_position: 3
 
 # Create a Blog Post
 
