--- a/docs/Хмелевар/Введение.md
+++ b/docs/Хмелевар/Введение.md
@@ -9,8 +9,12 @@ sidebar_position: 3
 - **Обновлен рейдовый билд;**
 - **Обновлены аксессуары;**
 - **Обновлена информация по выбору оружия.**
-- 
-- 
+
+---
+
+**В целом, патч 10.1 остается достаточно спокойным для Хмелеваров. Хотя они получили доступ к таланту, который раньше был исключительно у Ткачей Туманов, в виде [Песнь Чи-Цзи](https://www.wowhead.com/ru/spell=198898), которая теперь расположена в одном тире талантов с гораздо более полезным [Круг мира](https://www.wowhead.com/ru/spell=116844). В целом, помимо этого, никаких существенных изменений не было сделано в отношении Хмелеваров, также не было внесено никаких существенных изменений в таланты.**\
+\
+**Более подробно вы можете посмотреть изменения класса в конце этой страницы.**
 
 ## Create Blog
 
