--- a/docs/Хмелевар/Введение.md
+++ b/docs/Хмелевар/Введение.md
@@ -16,6 +16,10 @@ sidebar_position: 3
 
 Более подробно вы можете посмотреть изменения класса в конце этой страницы.
 
+---
+
+**ВВЕДЕНИЕ**
+
 ## Create Blog
 
 Docusaurus creates a **page for each blog post**, but also a **blog index page**, a **tag system**, an **RSS** feed...
