--- a/docs/Хмелевар/Введение.md
+++ b/docs/Хмелевар/Введение.md
@@ -18,7 +18,12 @@ sidebar_position: 3
 
 ---
 
-**ВВЕДЕНИЕ**
+## **ВВЕДЕНИЕ**
+
+Хмелевар - крайне мобильный танк, который сочетает в себе пассивное уменьшение входящего урона с мощным набором атакующих и защитных способностей. За годы, прошедшие с момента их появления в Mists of Pandaria, хмелевар неизменно остается одним из лучших танков в игре, и, обычно, он очень хорошо показывает себя в рейдах самых высоких уровней.\
+\
+Поговорим о самом главном и самом непонятном в хмелеваре, о том что делает хмелевара именно таким, какой он есть - [Пошатывание](https://ru.wowhead.com/spell=115069/). Это одновременно и дар и проклятье хмелевара, т.к. оно дает возможность переживать огромное количество единоразового урона, но при продолжительном высоком входящем уроне само же вас убьет. [Пошатывание](https://ru.wowhead.com/spell=115069/) откладывает основную часть получаемого урона в уникальный эффект пошатывания, который в дальнейшем можно снять вашими способностями. Механика откладывания урона в эффект пошатывания или полное уклонение от него, делает хмелевара всегда желанным танком в рейдах любой сложности и эпохальных+ подземельях. Кроме того, хмелевар обладает высокой полезностью для рейда: во-первых, благодаря уникальному эффекту монаха [Таинственное прикосновение](https://ru.wowhead.com/spell=8647), а во-вторых, за счёт невероятной мобильности.\
+Слабой стороной Хмелевара являются невысокие показатели самоисцеления и низкий объем здоровья. Однако, [Небесная удача](https://ru.wowhead.com/spell=216519) несколько компенсирует это в совместных активностях, где обычно на вас накладываются исцеляющие эффекты (хоты) от лекарей.
 
 ## Create Blog
 
