--- a/docs/Хмелевар/Введение.md
+++ b/docs/Хмелевар/Введение.md
@@ -53,6 +53,29 @@ _Он позволяет посмотреть первые топ 50 логов 
 \
 [Subcreation](https://subcreation.net/) – быстро посмотреть статистику по экипировке, талантам и всему-всему как с ключей, так и с рейдов.
 
+---
+
+## **ИЗМЕНЕНИЯ СПЕЦИАЛИЗАЦИИ**
+
+**ОБНОВЛЕНИЕ 10.1**
+
+**Классовые изменения**
+
+- [**Песнь Чи-Цзи**](https://www.wowhead.com/ru/spell=198898) **перенесена в классовую ветку талантов и теперь конкурирует с [Круг мира](https://www.wowhead.com/ru/spell=116844) за выбор;**
+- **Исправлена проблема, из-за которой [Свирепость Сюэня](https://www.wowhead.com/ru/spell=388674) не увеличивала урон призванным питомцам.**
+
+**Изменения хмелевара**
+
+- **Всплывающая подсказка для [Текучие движения](https://www.wowhead.com/ru/spell=387230) была обновлена для уточнения, что урон от [Нокаутирующий удар](https://www.wowhead.com/ru/spell=100784) уменьшается;**
+- [**Успокаивающий туман**](https://www.wowhead.com/ru/spell=115175) **- исцеление увеличено на 25%;**
+- [**Выброс ци**](https://www.wowhead.com/ru/spell=123986) **- исцеление увеличено на 25%;**
+- [**Волна ци**](https://www.wowhead.com/ru/spell=115098) **- исцеление увеличено на 25%;**
+- [**Устранение вреда**](https://www.wowhead.com/ru/spell=322101) **- исцеление увеличено на 25%;**
+- [**Пошатывающие атаки**](https://www.wowhead.com/ru/spell=387625) **теперь снимают на 25% больше [Пошатывание](https://www.wowhead.com/ru/spell=115069);**
+- [**Божественный отвар**](https://www.wowhead.com/ru/spell=322507) **- объем поглощения увеличен на 25%;**
+- [**Оживить**](https://www.wowhead.com/ru/spell=116670) **- объем исцеления увеличен на 92%;**
+- [**Небесная удача**](https://www.wowhead.com/ru/spell=216519) **- теперь имеет шанс, равный вашему шансу критического удара, исцелиться на дополнительные 80% от полученного лечения (было 65%).**
+
 ## Create Blog
 
 Docusaurus creates a **page for each blog post**, but also a **blog index page**, a **tag system**, an **RSS** feed...
