--- a/docs/Хмелевар/Введение.md
+++ b/docs/Хмелевар/Введение.md
@@ -25,22 +25,6 @@ sidebar_position: 3
 Поговорим о самом главном и самом непонятном в хмелеваре, о том что делает хмелевара именно таким, какой он есть - [Пошатывание](https://ru.wowhead.com/spell=115069/). Это одновременно и дар и проклятье хмелевара, т.к. оно дает возможность переживать огромное количество единоразового урона, но при продолжительном высоком входящем уроне само же вас убьет. [Пошатывание](https://ru.wowhead.com/spell=115069/) откладывает основную часть получаемого урона в уникальный эффект пошатывания, который в дальнейшем можно снять вашими способностями. Механика откладывания урона в эффект пошатывания или полное уклонение от него, делает хмелевара всегда желанным танком в рейдах любой сложности и эпохальных+ подземельях. Кроме того, хмелевар обладает высокой полезностью для рейда: во-первых, благодаря уникальному эффекту монаха [Таинственное прикосновение](https://ru.wowhead.com/spell=8647), а во-вторых, за счёт невероятной мобильности.\
 Слабой стороной Хмелевара являются невысокие показатели самоисцеления и низкий объем здоровья. Однако, [Небесная удача](https://ru.wowhead.com/spell=216519) несколько компенсирует это в совместных активностях, где обычно на вас накладываются исцеляющие эффекты (хоты) от лекарей.
 
-| **СИЛЬНЫЕ СТОРОНЫ**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         | **СЛАБЫЕ СТОРОНЫ**                                                                                                                                                                             |
-| ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **+ [Пошатывание](https://ru.wowhead.com/spell=115069), [Скрытые резервы](https://www.wowhead.com/ru/spell=322120), [Очищающий отвар](https://ru.wowhead.com/spell=119582) и [Божественный отвар](https://ru.wowhead.com/spell=322507) дают возможность выдерживать огромное количество урона. Кроме того, гарантируют плавное получение урона без резких скачков здоровья;**\\                                                                                                                                                                             |                                                                                                                                                                                                |
-| **+ [Небесная удача](https://ru.wowhead.com/spell=216519) дает преимущество в исцелении перед другими танками;**\\                                                                                                                                                                                                                                                                                                                                                                                                                                          |                                                                                                                                                                                                |
-| **+ [Тигриное рвение](https://www.wowhead.com/ru/spell=116841), [Кувырок](https://www.wowhead.com/ru/spell=109132) и [Трансцендентность](https://www.wowhead.com/ru/spell=101643) дают невероятную мобильность, в сравнении с другими танками;**\\                                                                                                                                                                                                                                                                                                          |                                                                                                                                                                                                |
-| **+ Множество способностей для позиционирования противников, таких как: [Столкновение](https://www.wowhead.com/ru/spell=324312), [Призыв статуи Черного Быка](https://www.wowhead.com/ru/spell=115315) и [Круг мира](https://www.wowhead.com/ru/spell=116844);**\\                                                                                                                                                                                                                                                                                          |                                                                                                                                                                                                |
-| **+ Способности для контроля противников, такие как: [Круговой удар ногой](https://www.wowhead.com/ru/spell=119381) и [Паралич](https://www.wowhead.com/ru/spell=115078);**\\                                                                                                                                                                                                                                                                                                                                                                               |                                                                                                                                                                                                |
-| **+ Уникальные ауры, которые действуют на союзников: [Близко к сердцу](https://www.wowhead.com/ru/spell=389574), [Щедрая доля](https://www.wowhead.com/ru/spell=389575) и [Стремительность](https://www.wowhead.com/ru/spell=157411);**\\                                                                                                                                                                                                                                                                                                                   |                                                                                                                                                                                                |
-| **+ Уникальный для монаха эффект, наличие которого обязательно в любом рейде - [Таинственное прикосновение](https://www.wowhead.com/ru/spell=8647);**\\                                                                                                                                                                                                                                                                                                                                                                                                     |                                                                                                                                                                                                |
-| **+ Бурстовый урон. У хмелеваров теперь есть большое количество атакующих способностей и они невероятно хороши в нанесении бурстового АоЕ-урона;**\\                                                                                                                                                                                                                                                                                                                                                                                                        |                                                                                                                                                                                                |
-| **+ Универсальность. Хмелевары могут не быть лучшими во всем, но во всем они могут составить очень серьезную конкуренцию;**\\                                                                                                                                                                                                                                                                                                                                                                                                                               |                                                                                                                                                                                                |
-| **+ Прощает ошибки новичков и не наказывает за неопытность. Благодаря своим пассивным навыкам и тому, что его защитные эффекты активируются основными атакующими способностями, монах может хорошо держать на себе противников и не умирать. Однако, для раскрытия всей силы хмелевара вам придется многому научиться.**                                                                                                                                                                                                                                    | **- Количество здоровья. Хмелевары имеют здоровье, сравнимое со здоровьем некоторых дпс классов. Это делает его уязвимым к продолжительному урону от магии и постоянному урону от дебафов;**\\ |
-| **- Требование к большому количеству привязки горячих клавиш (биндов), которые необходимо отслеживать;**\\                                                                                                                                                                                                                                                                                                                                                                                                                                                  |                                                                                                                                                                                                |
-| **- Может потребоваться установить дополнительные аддоны или WeakAura для отслеживания эффекта [Пошатывание](https://ru.wowhead.com/spell=115069/), т.к. стандартный интерфейс отображает только 1/10 часть его эффективности;**\\                                                                                                                                                                                                                                                                                                                          |                                                                                                                                                                                                |
-| **- Сложность. Благодаря переработанной системе талантов, у хмелеваров нет серьезных слабостей. У него есть возможность справиться с любой ситуацией и это невероятно важная деталь. Проблема в том, что для максимизации пользы от хмелевара вам потребуется много биндов и достаточно высокий уровень механического мастерства. У вас есть огромная коллекция атакующих способностей, способностей защиты и мобильности. Хмелевар - это очень сильный танк, который требует от вас достаточно высокого умения игры, чтобы раскрыть все его возможности.** |                                                                                                                                                                                                |
-
 ---
 
 ## **ПОЛЕЗНЫЕ РЕСУРСЫ**
@@ -59,85 +43,19 @@ _Он позволяет посмотреть первые топ 50 логов 
 
 **ОБНОВЛЕНИЕ 10.1**
 
-**Классовые изменения**
+Классовые изменения
 
-- [**Песнь Чи-Цзи**](https://www.wowhead.com/ru/spell=198898) **перенесена в классовую ветку талантов и теперь конкурирует с [Круг мира](https://www.wowhead.com/ru/spell=116844) за выбор;**
-- **Исправлена проблема, из-за которой [Свирепость Сюэня](https://www.wowhead.com/ru/spell=388674) не увеличивала урон призванным питомцам.**
+- [Песнь Чи-Цзи](https://www.wowhead.com/ru/spell=198898) перенесена в классовую ветку талантов и теперь конкурирует с [Круг мира](https://www.wowhead.com/ru/spell=116844) за выбор;
+- Исправлена проблема, из-за которой [Свирепость Сюэня](https://www.wowhead.com/ru/spell=388674) не увеличивала урон призванным питомцам.
 
-**Изменения хмелевара**
+Изменения хмелевара
 
-- **Всплывающая подсказка для [Текучие движения](https://www.wowhead.com/ru/spell=387230) была обновлена для уточнения, что урон от [Нокаутирующий удар](https://www.wowhead.com/ru/spell=100784) уменьшается;**
-- [**Успокаивающий туман**](https://www.wowhead.com/ru/spell=115175) **- исцеление увеличено на 25%;**
-- [**Выброс ци**](https://www.wowhead.com/ru/spell=123986) **- исцеление увеличено на 25%;**
-- [**Волна ци**](https://www.wowhead.com/ru/spell=115098) **- исцеление увеличено на 25%;**
-- [**Устранение вреда**](https://www.wowhead.com/ru/spell=322101) **- исцеление увеличено на 25%;**
-- [**Пошатывающие атаки**](https://www.wowhead.com/ru/spell=387625) **теперь снимают на 25% больше [Пошатывание](https://www.wowhead.com/ru/spell=115069);**
-- [**Божественный отвар**](https://www.wowhead.com/ru/spell=322507) **- объем поглощения увеличен на 25%;**
-- [**Оживить**](https://www.wowhead.com/ru/spell=116670) **- объем исцеления увеличен на 92%;**
-- [**Небесная удача**](https://www.wowhead.com/ru/spell=216519) **- теперь имеет шанс, равный вашему шансу критического удара, исцелиться на дополнительные 80% от полученного лечения (было 65%).**
-
-## Create Blog
-
-Docusaurus creates a **page for each blog post**, but also a **blog index page**, a **tag system**, an **RSS** feed...
-
-## Create your first Post
-
-Create a file at `blog/2021-02-28-greetings.md`:
-
-```md title="blog/2021-02-28-greetings.md"
----
-slug: greetings
-title: Greetings!
-authors:
-  - name: Joel Marcey
-    title: Co-creator of Docusaurus 1
-    url: https://github.com/JoelMarcey
-    image_url: https://github.com/JoelMarcey.png
-  - name: Sébastien Lorber
-    title: Docusaurus maintainer
-    url: https://sebastienlorber.com
-    image_url: https://github.com/slorber.png
-tags: [greetings]
----
-
-Congratulations, you have made your first post!
-
-Feel free to play around and edit this post as much as you like.
-```
-
-A new blog post is now available at <http://localhost:3000/blog/greetings>.
-
----
-
-## sidebar_position: 3
-
-# Create a Blog Post
-
-Docusaurus creates a **page for each blog post**, but also a **blog index page**, a **tag system**, an **RSS** feed...
-
-## Create your first Post
-
-Create a file at `blog/2021-02-28-greetings.md`:
-
-```md title="blog/2021-02-28-greetings.md"
----
-slug: greetings
-title: Greetings!
-authors:
-  - name: Joel Marcey
-    title: Co-creator of Docusaurus 1
-    url: https://github.com/JoelMarcey
-    image_url: https://github.com/JoelMarcey.png
-  - name: Sébastien Lorber
-    title: Docusaurus maintainer
-    url: https://sebastienlorber.com
-    image_url: https://github.com/slorber.png
-tags: [greetings]
----
-
-Congratulations, you have made your first post!
-
-Feel free to play around and edit this post as much as you like.
-```
-
-A new blog post is now available at <http://localhost:3000/blog/greetings>.
+- Всплывающая подсказка для [Текучие движения](https://www.wowhead.com/ru/spell=387230) была обновлена для уточнения, что урон от [Нокаутирующий удар](https://www.wowhead.com/ru/spell=100784) уменьшается;
+- [Успокаивающий туман](https://www.wowhead.com/ru/spell=115175) - исцеление увеличено на 25%;
+- [Выброс ци](https://www.wowhead.com/ru/spell=123986) - исцеление увеличено на 25%;
+- [Волна ци](https://www.wowhead.com/ru/spell=115098) - исцеление увеличено на 25%;
+- [Устранение вреда](https://www.wowhead.com/ru/spell=322101) - исцеление увеличено на 25%;
+- [Пошатывающие атаки](https://www.wowhead.com/ru/spell=387625) теперь снимают на 25% больше [Пошатывание](https://www.wowhead.com/ru/spell=115069);
+- [Божественный отвар](https://www.wowhead.com/ru/spell=322507) - объем поглощения увеличен на 25%;
+- [Оживить](https://www.wowhead.com/ru/spell=116670) - объем исцеления увеличен на 92%;
+- [Небесная удача](https://www.wowhead.com/ru/spell=216519) - теперь имеет шанс, равный вашему шансу критического удара, исцелиться на дополнительные 80% от полученного лечения (было 65%).
