--- a/docs/Хмелевар/Введение.md
+++ b/docs/Хмелевар/Введение.md
@@ -25,6 +25,21 @@ sidebar_position: 3
 Поговорим о самом главном и самом непонятном в хмелеваре, о том что делает хмелевара именно таким, какой он есть - [Пошатывание](https://ru.wowhead.com/spell=115069/). Это одновременно и дар и проклятье хмелевара, т.к. оно дает возможность переживать огромное количество единоразового урона, но при продолжительном высоком входящем уроне само же вас убьет. [Пошатывание](https://ru.wowhead.com/spell=115069/) откладывает основную часть получаемого урона в уникальный эффект пошатывания, который в дальнейшем можно снять вашими способностями. Механика откладывания урона в эффект пошатывания или полное уклонение от него, делает хмелевара всегда желанным танком в рейдах любой сложности и эпохальных+ подземельях. Кроме того, хмелевар обладает высокой полезностью для рейда: во-первых, благодаря уникальному эффекту монаха [Таинственное прикосновение](https://ru.wowhead.com/spell=8647), а во-вторых, за счёт невероятной мобильности.\
 Слабой стороной Хмелевара являются невысокие показатели самоисцеления и низкий объем здоровья. Однако, [Небесная удача](https://ru.wowhead.com/spell=216519) несколько компенсирует это в совместных активностях, где обычно на вас накладываются исцеляющие эффекты (хоты) от лекарей.
 
+<Holocron.Callout type="note">
+    **СИЛЬНЫЕ СТОРОНЫ:**
+
+    **+ [Пошатывание](https://ru.wowhead.com/spell=115069), [Скрытые резервы](https://www.wowhead.com/ru/spell=322120), [Очищающий отвар](https://ru.wowhead.com/spell=119582) и [Божественный отвар](https://ru.wowhead.com/spell=322507) дают возможность выдерживать огромное количество урона. Кроме того, гарантируют плавное получение урона без резких скачков здоровья;**\
+    **+ [Небесная удача](https://ru.wowhead.com/spell=216519) дает преимущество в исцелении перед другими танками;**\
+    **+ [Тигриное рвение](https://www.wowhead.com/ru/spell=116841), [Кувырок](https://www.wowhead.com/ru/spell=109132) и [Трансцендентность](https://www.wowhead.com/ru/spell=101643) дают невероятную мобильность, в сравнении с другими танками;**\
+    **+ Множество способностей для позиционирования противников, таких как: [Столкновение](https://www.wowhead.com/ru/spell=324312), [Призыв статуи Черного Быка](https://www.wowhead.com/ru/spell=115315) и [Круг мира](https://www.wowhead.com/ru/spell=116844);**\
+    **+ Способности для контроля противников, такие как: [Круговой удар ногой](https://www.wowhead.com/ru/spell=119381) и [Паралич](https://www.wowhead.com/ru/spell=115078);**\
+    **+ Уникальные ауры, которые действуют на союзников: [Близко к сердцу](https://www.wowhead.com/ru/spell=389574), [Щедрая доля](https://www.wowhead.com/ru/spell=389575) и [Стремительность](https://www.wowhead.com/ru/spell=157411);**\
+    **+ Уникальный для монаха эффект, наличие которого обязательно в любом рейде - [Таинственное прикосновение](https://www.wowhead.com/ru/spell=8647);**\
+    **+ Бурстовый урон. У хмелеваров теперь есть большое количество атакующих способностей и они невероятно хороши в нанесении бурстового АоЕ-урона;**\
+    **+ Универсальность. Хмелевары могут не быть лучшими во всем, но во всем они могут составить очень серьезную конкуренцию;**\
+    **+ Прощает ошибки новичков и не наказывает за неопытность. Благодаря своим пассивным навыкам и тому, что его защитные эффекты активируются основными атакующими способностями, монах может хорошо держать на себе противников и не умирать. Однако, для раскрытия всей силы хмелевара вам придется многому научиться.**
+</Holocron.Callout>
+
 ---
 
 ## **ПОЛЕЗНЫЕ РЕСУРСЫ**
