--- a/docs/Хмелевар/Введение.md
+++ b/docs/Хмелевар/Введение.md
@@ -28,16 +28,25 @@ sidebar_position: 3
 <Holocron.Callout type="note">
     **СИЛЬНЫЕ СТОРОНЫ:**
 
-    **+ [Пошатывание](https://ru.wowhead.com/spell=115069), [Скрытые резервы](https://www.wowhead.com/ru/spell=322120), [Очищающий отвар](https://ru.wowhead.com/spell=119582) и [Божественный отвар](https://ru.wowhead.com/spell=322507) дают возможность выдерживать огромное количество урона. Кроме того, гарантируют плавное получение урона без резких скачков здоровья;**\
-    **+ [Небесная удача](https://ru.wowhead.com/spell=216519) дает преимущество в исцелении перед другими танками;**\
-    **+ [Тигриное рвение](https://www.wowhead.com/ru/spell=116841), [Кувырок](https://www.wowhead.com/ru/spell=109132) и [Трансцендентность](https://www.wowhead.com/ru/spell=101643) дают невероятную мобильность, в сравнении с другими танками;**\
-    **+ Множество способностей для позиционирования противников, таких как: [Столкновение](https://www.wowhead.com/ru/spell=324312), [Призыв статуи Черного Быка](https://www.wowhead.com/ru/spell=115315) и [Круг мира](https://www.wowhead.com/ru/spell=116844);**\
-    **+ Способности для контроля противников, такие как: [Круговой удар ногой](https://www.wowhead.com/ru/spell=119381) и [Паралич](https://www.wowhead.com/ru/spell=115078);**\
-    **+ Уникальные ауры, которые действуют на союзников: [Близко к сердцу](https://www.wowhead.com/ru/spell=389574), [Щедрая доля](https://www.wowhead.com/ru/spell=389575) и [Стремительность](https://www.wowhead.com/ru/spell=157411);**\
-    **+ Уникальный для монаха эффект, наличие которого обязательно в любом рейде - [Таинственное прикосновение](https://www.wowhead.com/ru/spell=8647);**\
-    **+ Бурстовый урон. У хмелеваров теперь есть большое количество атакующих способностей и они невероятно хороши в нанесении бурстового АоЕ-урона;**\
-    **+ Универсальность. Хмелевары могут не быть лучшими во всем, но во всем они могут составить очень серьезную конкуренцию;**\
-    **+ Прощает ошибки новичков и не наказывает за неопытность. Благодаря своим пассивным навыкам и тому, что его защитные эффекты активируются основными атакующими способностями, монах может хорошо держать на себе противников и не умирать. Однако, для раскрытия всей силы хмелевара вам придется многому научиться.**
+    \+ [Пошатывание](https://ru.wowhead.com/spell=115069), [Скрытые резервы](https://www.wowhead.com/ru/spell=322120), [Очищающий отвар](https://ru.wowhead.com/spell=119582) и [Божественный отвар](https://ru.wowhead.com/spell=322507) дают возможность выдерживать огромное количество урона. Кроме того, гарантируют плавное получение урона без резких скачков здоровья;\
+    + [Небесная удача](https://ru.wowhead.com/spell=216519) дает преимущество в исцелении перед другими танками;\
+    + [Тигриное рвение](https://www.wowhead.com/ru/spell=116841), [Кувырок](https://www.wowhead.com/ru/spell=109132) и [Трансцендентность](https://www.wowhead.com/ru/spell=101643) дают невероятную мобильность, в сравнении с другими танками;\
+    + Множество способностей для позиционирования противников, таких как: [Столкновение](https://www.wowhead.com/ru/spell=324312), [Призыв статуи Черного Быка](https://www.wowhead.com/ru/spell=115315) и [Круг мира](https://www.wowhead.com/ru/spell=116844);\
+    + Способности для контроля противников, такие как: [Круговой удар ногой](https://www.wowhead.com/ru/spell=119381) и [Паралич](https://www.wowhead.com/ru/spell=115078);\
+    + Уникальные ауры, которые действуют на союзников: [Близко к сердцу](https://www.wowhead.com/ru/spell=389574), [Щедрая доля](https://www.wowhead.com/ru/spell=389575) и [Стремительность](https://www.wowhead.com/ru/spell=157411);\
+    + Уникальный для монаха эффект, наличие которого обязательно в любом рейде - [Таинственное прикосновение](https://www.wowhead.com/ru/spell=8647);\
+    + Бурстовый урон. У хмелеваров теперь есть большое количество атакующих способностей и они невероятно хороши в нанесении бурстового АоЕ-урона;\
+    + Универсальность. Хмелевары могут не быть лучшими во всем, но во всем они могут составить очень серьезную конкуренцию;\
+    + Прощает ошибки новичков и не наказывает за неопытность. Благодаря своим пассивным навыкам и тому, что его защитные эффекты активируются основными атакующими способностями, монах может хорошо держать на себе противников и не умирать. Однако, для раскрытия всей силы хмелевара вам придется многому научиться.
+</Holocron.Callout>
+
+<Holocron.Callout type="note">
+    **СЛАБЫЕ СТОРОНЫ:**
+
+    \- Количество здоровья. Хмелевары имеют здоровье, сравнимое со здоровьем некоторых дпс классов. Это делает его уязвимым к продолжительному урону от магии и постоянному урону от дебафов;\
+    - Требование к большому количеству привязки горячих клавиш (биндов), которые необходимо отслеживать;\
+    - Может потребоваться установить дополнительные аддоны или WeakAura для отслеживания эффекта [Пошатывание](https://ru.wowhead.com/spell=115069/), т.к. стандартный интерфейс отображает только 1/10 часть его эффективности;\
+    - Сложность. Благодаря переработанной системе талантов, у хмелеваров нет серьезных слабостей. У него есть возможность справиться с любой ситуацией и это невероятно важная деталь. Проблема в том, что для максимизации пользы от хмелевара вам потребуется много биндов и достаточно высокий уровень механического мастерства. У вас есть огромная коллекция атакующих способностей, способностей защиты и мобильности. Хмелевар - это очень сильный танк, который требует от вас достаточно высокого умения игры, чтобы раскрыть все его возможности.
 </Holocron.Callout>
 
 ---
@@ -58,7 +67,7 @@ _Он позволяет посмотреть первые топ 50 логов 
 
 **ОБНОВЛЕНИЕ 10.1**
 
-Классовые изменения
+**Классовые изменения**
 
 - [Песнь Чи-Цзи](https://www.wowhead.com/ru/spell=198898) перенесена в классовую ветку талантов и теперь конкурирует с [Круг мира](https://www.wowhead.com/ru/spell=116844) за выбор;
 - Исправлена проблема, из-за которой [Свирепость Сюэня](https://www.wowhead.com/ru/spell=388674) не увеличивала урон призванным питомцам.
