--- a/docs/Монах/Хмелевар/Введение.md
+++ b/docs/Монах/Хмелевар/Введение.md
@@ -2,11 +2,14 @@
 sidebar_position: 1
 ---
 
-## **ОБНОВЛЕНИЕ 17 мая 2023**
+[//]: # (## **ОБНОВЛЕНИЕ 17 мая 2023**)
 
-- Обновлен рейдовый билд
-- Обновлены аксессуары
-- Обновлена информация по выбору оружия.
+[//]: # ()
+[//]: # (- Обновлен рейдовый билд)
+
+[//]: # (- Обновлены аксессуары)
+
+[//]: # (- Обновлена информация по выбору оружия.)
 
 ---
 
