--- a/docs/Монах/Хмелевар/Введение.md
+++ b/docs/Монах/Хмелевар/Введение.md
@@ -2,7 +2,7 @@
 sidebar_position: 1
 ---
 
-## **ОБНОВЛЕНИЕ 17 мая 2023**
+# **ОБНОВЛЕНИЕ 17 мая 2023**
 
 - Обновлен рейдовый билд
 - Обновлены аксессуары
