--- a/book/Монах/Хмелевар/Введение.md
+++ b/book/Монах/Хмелевар/Введение.md
@@ -2,7 +2,11 @@
 sidebar_position: 1
 ---
 
-# **ОБНОВЛЕНИЕ 17 мая 2023**
+## ВВЕДЕНИЕ
+
+---
+
+### ОБНОВЛЕНИЕ 17 мая 2023
 
 - Обновлен рейдовый билд
 - Обновлены аксессуары
@@ -15,9 +19,6 @@ sidebar_position: 1
 Более подробно вы можете посмотреть изменения класса в конце этой страницы.
 
 ---
-
-## **ВВЕДЕНИЕ**
-
 Хмелевар - крайне мобильный танк, который сочетает в себе пассивное уменьшение входящего урона с мощным набором атакующих и защитных способностей. За годы, прошедшие с момента их появления в Mists of Pandaria, хмелевар неизменно остается одним из лучших танков в игре, и, обычно, он очень хорошо показывает себя в рейдах самых высоких уровней.
 
 Поговорим о самом главном и самом непонятном в хмелеваре, о том что делает хмелевара именно таким, какой он есть - [Пошатывание](https://ru.wowhead.com/spell=115069/). Это одновременно и дар и проклятье хмелевара, т.к. оно дает возможность переживать огромное количество единоразового урона, но при продолжительном высоком входящем уроне само же вас убьет. [Пошатывание](https://ru.wowhead.com/spell=115069/) откладывает основную часть получаемого урона в уникальный эффект пошатывания, который в дальнейшем можно снять вашими способностями. Механика откладывания урона в эффект пошатывания или полное уклонение от него, делает хмелевара всегда желанным танком в рейдах любой сложности и эпохальных+ подземельях. Кроме того, хмелевар обладает высокой полезностью для рейда: во-первых, благодаря уникальному эффекту монаха [Таинственное прикосновение](https://ru.wowhead.com/spell=8647), а во-вторых, за счёт невероятной мобильности.
@@ -38,7 +39,7 @@ sidebar_position: 1
 
 ---
 
-## **ПОЛЕЗНЫЕ РЕСУРСЫ**
+## ПОЛЕЗНЫЕ РЕСУРСЫ
 
 [RaidBots](https://www.raidbots.com/) – cпециальная утилита для оптимизации вашего персонажа.
 \_Позволяет сравнить ваше снаряжение и многое другое для повышения вашего урона, основываясь на симуляции боев с одной или несколькими целями.
@@ -48,7 +49,7 @@ sidebar_position: 1
 
 ---
 
-## **ИЗМЕНЕНИЯ СПЕЦИАЛИЗАЦИИ**
+## ИЗМЕНЕНИЯ СПЕЦИАЛИЗАЦИИ
 
 **ОБНОВЛЕНИЕ 10.1**
 
